Update screens, configure logo, configured colors

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -31,8 +31,8 @@
 
 $primary   : #3f51b5;
 //$secondary : #5167c9;
-$secondary : #5167c9;
-$tertiary  : #ffffff;
+$secondary : #667bd6;
+$tertiary  : #d0c7c7;
 $accent    : #9C27B0;
 
 $dark      : #1d1d1d;
