Enhanced the user welcome page

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -42,3 +42,15 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+// For usage in components
+$void-suit:  #b5b9bb;
+$floating-rock: #5a5a5a;
+$dark-text: #cbcbcb;
+
+$header-btn-color--light: #5d4682;
+$header-btn-hover-color: #212121; // $grey-10
+$header-btn-color: #4d5dbb;
+$header-btn-hover-color: #fff;
+
+$letter-spacing-brand: .7px
